kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: protools
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30004
  selector:
    app: protools
